# lesson_server

./: Cargo.toml  README.md
sql/: create_tables.sql  drop_tables.sql
src/: main.rs  utils.rs
src/handlers/: email_verefication.rs  mod.rs  slots_handler.rs  tasks_handler.rs  transactions_handler.rs  user_s_handler.rs
src/repositoryes/: mod.rs  slot_s_repo.rs  task_s_repo.rs  transaction_s_repo.rs  user_s_repo.rs
src/types/: dto.rs  errors.rs  mod.rs  slot.rs  slots_component.rs  subjects.rs  task.rs  tasks_component.rs  transaction.rs  user.rs
