[package]
name = "lesson_server"
version = "0.6.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["rt-multi-thread"] }
serde_json = "1.0.96"
serde = { version = "1.0.163", features = ["derive"] }
dotenvy = "0.15.7"
sqlx = { version = "0.6.3", features = [ "runtime-actix-native-tls", "runtime-actix", "postgres", "uuid", "chrono", "decimal" ] }
chrono = { version = "0.4", features = ["serde"] }
actix-cors = "0.6.4"
reqwest = {version = "0.11.18", features = ["json"]}
lettre = "0.10"

